tests/baselines/reference/parserWithStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserWithStatement2.ts (2 errors) ====
    with (1)
          ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
      return;
      ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.